--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
+body{
+    background-color: black;
+}
+
+
+
 .contenedor {
+    background-image: url('fondo.jpg');
+    background-size: cover;
+    background-position: center;
+
     border-radius: 50px;
     margin: auto;
     width: 100%;
@@ -40,6 +50,8 @@ h2 {
 
 h3{
     text-align: center;
+    color: white;
+    font-family: sans-serif;
 }
 
 img {
@@ -54,16 +66,12 @@ img {
 #papel1, #tijeras1, #piedra1,#papel2, #tijeras2, #piedra2 {
     border: 5px black solid;
 }
+
 #papel1:hover, #tijeras1:hover, #piedra1:hover {
     transition: 0.2s;
-
     box-shadow: 0px 0px 13px rgb(37, 34, 29);
+}
 
-}
-#papel1:focus, #tijeras1:focus, #piedra1:focus {
-    transition: 0.3s;
-    filter:invert() 
-}
 button{
 
     cursor: pointer;
@@ -73,8 +81,11 @@ button{
     background-color: rgb(76, 73, 78);
     height: 50px;
     letter-spacing: 2px;
+    
 }
 button:hover{
     box-shadow: 0px 0px 13px rgb(185, 182, 176);
 
 }
+
+
